# apple_rules_lint

./: .bazelignore  .gitignore  MODULE.bazel  README.md  RELEASE.md  WORKSPACE  api.md
.github/workflows/: bcr_tests.yml
example/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
example/lint_rule/: amazing_linter.bzl
example/project/: BUILD.bazel
example/project/override/: BUILD.bazel
lint/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  setup.bzl  workspace.bzl
lint/private/: BUILD.bazel  get_lint_config.bzl  package_lint_config.bzl  providers.bzl  register_linters.bzl
lint/private/docs/: BUILD.bazel
scripts/: build-release-artifacts  generate-docs
tests/bcr/: .bazelrc  .bazelversion  BUILD.bazel  MODULE.bazel
tests/bcr/other_module/: BUILD.bazel  MODULE.bazel
