load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "defs.bzl",
])

bzl_library(
    name = "implementation",
    srcs = [
        ":defs.bzl",
        ":setup.bzl",
        "@apple_linters//:defs.bzl",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lint/private:implementation",
    ],
)
