load("@io_bazel_stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    out = "api.md",
    input = "//lint:defs.bzl",
    symbol_names = [
        "LinterInfo",
        "get_lint_config",
        "package_lint_config",
    ],
    deps = [
        "//lint:implementation",
        "//lint/private:implementation",
    ],
)
